# sot-core

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  NEWS  README.md  index.html  package.xml
doc/: CMakeLists.txt  Doxyfile.extra.in  footer.html  header.html  package.dox.cmake  references.bib
doc/additionalDoc/: a-features.h  codeorg.h  e-operators.h  feature-doc.h  install-doc.h  namespace-doc.h  package.h  package.hh  parameter-server-doc.h  references-doc.h  sot-doc.h
doc/pictures/: feature.fig  task.fig
doc/sphinx/: conf.py.in  index.rst.in
include/: CMakeLists.txt
include/sot-core/: additional-functions.h  binary-int-to-uint.h  binary-op.h  clamp-workspace.h  com-freezer.h  constraint.h  contiifstream.h  control-gr.h  control-pd.h  debug.h  derivator.h  distant-shell.h  exception-abstract.h  exception-dynamic.h  exception-factory.h  exception-feature.h  exception-signal.h  exception-task.h  exception-tools.h  exception-traces.h  factory.h  feature-1d.h  feature-abstract.h  feature-generic.h  feature-joint-limits.h  feature-line-distance.h  feature-point6d-relative.h  feature-point6d.h  feature-task.h  feature-vector3.h  feature-visual-point.h  fir-filter.h  flags.h  gain-adaptive.h  gain-hyperbolic.h  gripper-control.h  import-default-paths.h.cmake  import.h  integrator-abstract.h  integrator-euler.h  (+107 more)
src/: CMakeLists.txt  logger.cpp  python-module.cc  robot-utils.cpp  sot-core.cpp  sot-coreMacros.cmake
src/control/: admittance-control-op-point-python.h  admittance-control-op-point.cpp  control-gr-python.h  control-gr.cpp  control-pd-python.h  control-pd.cpp
src/debug/: contiifstream.cpp  debug.cpp
src/exception/: exception-abstract.cpp  exception-dynamic.cpp  exception-factory.cpp  exception-feature.cpp  exception-signal.cpp  exception-task.cpp  exception-tools.cpp  exception-traces.cpp  sotExceptionAbstract.cpp  sotExceptionDynamic.cpp  sotExceptionFactory.cpp  sotExceptionFeature.cpp  sotExceptionSignal.cpp  sotExceptionTask.cpp  sotExceptionTools.cpp  sotExceptionTraces.cpp
src/factory/: additional-functions.cpp  factory.cpp  pool.cpp  sotAdditionalFunctions.cpp  sotAdditionalFunctions.h  sotFactory.cpp  sotFactory.h  sotMacrosSignal.h  sotPool.cpp  sotPool.h
src/feature/: feature-1d-python.h  feature-1d.cpp  feature-abstract.cpp  feature-generic-python.h  feature-generic.cpp  feature-joint-limits-command.h  feature-joint-limits-python.h  feature-joint-limits.cpp  feature-line-distance-python.h  feature-line-distance.cpp  feature-point6d-python.h  feature-point6d-relative-python.h  feature-point6d-relative.cpp  feature-point6d.cpp  feature-pose-python.h  feature-pose.cpp  feature-posture-python.h  feature-posture.cpp  feature-task-python.h  feature-task.cpp  feature-transformation.cpp  feature-vector3-python.h  feature-vector3.cpp  feature-visual-point-python.h  feature-visual-point.cpp  sotFeature1D.cpp  sotFeatureAbstract.cpp  sotFeatureGeneric.cpp  sotFeatureJointLimits.cpp  sotFeatureLineDistance.cpp  sotFeaturePoint6d.cpp  sotFeaturePoint6dRelative.cpp  sotFeatureTask.cpp  sotFeatureVector3.cpp  sotFeatureVisualPoint.cpp  visual-point-projecter-python.h  visual-point-projecter.cpp
src/filters/: causal-filter.cpp  filter-differentiator-python.h  filter-differentiator.cpp  madgwickahrs-python.h  madgwickahrs.cpp
src/math/: matrix-force.cpp  matrix-homogeneous.cpp  matrix-rotation.cpp  matrix-twist.cpp  op-point-modifier-python.h  op-point-modifier.cpp  op-point-modifior.cpp  segment-python.h  segment.cpp  sotMatrixForce.cpp  sotMatrixHomogeneous.cpp  sotMatrixRotation.cpp  sotMatrixTwist.cpp  sotOpPointModifior.cpp  sotVectorQuaternion.cpp  sotVectorRollPitchYaw.cpp  sotVectorUTheta.cpp  vector-quaternion.cpp  vector-roll-pitch-yaw.cpp  vector-utheta.cpp
src/matrix/: binary-op.cpp  derivator-python.h  derivator.cpp  double-constant-python.h  double-constant.cpp  fir-filter-python.h  fir-filter.cpp  integrator-abstract-python.h  integrator-abstract.cpp  integrator-abstract.t.cpp  integrator-euler-python-module-py.cc  integrator-euler-python.h  integrator-euler.cpp  integrator-euler.t.cpp  matrix-constant-command.h  matrix-constant-python.h  matrix-constant.cpp  matrix-svd.cpp  operator-python-module-py.cc  operator.cpp  operator.hh  sotBinaryOp.cpp  sotDerivator.cpp  sotFIRFilter.cpp  sotIntegratorAbstract.cpp  sotIntegratorEuler.cpp  sotMatrixConstant.cpp  sotUnaryOp.cpp  sotVectorConstant.cpp  sotVectorToRotation.cpp  unary-op.cpp  vector-constant-command.h  vector-constant-python.h  vector-constant.cpp  vector-to-rotation-python.h  vector-to-rotation.cpp
src/signal/: signal-cast.cpp  sotSignalCast.cpp
src/sot/: flags.cpp  memory-task-sot.cpp  rotation-simple.cpp  solver-hierarchical-inequalities.cpp  sot-command.h  sot-h.cpp  sot-python.h  sot-qr.cpp  sot.cpp  sotFlags.cpp  sotMemoryTaskSOT.cpp  sotRotationSimple.cpp  sotSOT.cpp  sotSOTH.cpp  sotSOTQr.cpp  sotSolverHierarchicalInequalities.cpp  sotWeightedSOT.cpp  weighted-sot.cpp
src/task/: constraint-command.h  constraint.cpp  gain-adaptative.cpp  gain-adaptive-command.h  gain-adaptive-python.h  gain-adaptive.cpp  gain-hyperbolic-python.h  gain-hyperbolic.cpp  multi-bound.cpp  sotConstraint.cpp  sotGainAdaptative.cpp  sotGainHyperbolic.cpp  sotMultiBound.cpp  sotTask.cpp  sotTaskAbstract.cpp  sotTaskConti.cpp  sotTaskPD.cpp  sotTaskUnilateral.cpp  task-abstract.cpp  task-command.h  task-conti-python.h  task-conti.cpp  task-pd-python.h  task-pd.cpp  task-python.h  task-unilateral-python.h  task-unilateral.cpp  task.cpp
src/tools/: binary-int-to-uint-python.h  binary-int-to-uint.cpp  clamp-workspace-python.h  clamp-workspace.cpp  com-freezer-python.h  com-freezer.cpp  device.cpp  distant-shell.cpp  event-python.h  event.cpp  exp-moving-avg-python.h  exp-moving-avg.cpp  generic-device.cpp  gradient-ascent-python.h  (+51 more)
tests/: CMakeLists.txt
tools/: CMakeLists.txt
unitTesting/: CMakeLists.txt  dummy.cpp  main.cpp  test-paths.h  test-paths.h.cmake  test_robot_utils.cpp
(+2769 files in other folders)
