<?xml version="1.0"?>
<package format="3">
  <name>sot-core</name>
  <version>4.11.8</version>
  <description>
    Hierarchical task solver plug-in for dynamic-graph
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <license>BSD</license>

  <url type="website">http://stack-of-tasks.github.io</url>
  <url type="repository">http://www.github.com/stack-of-tasks/sot-core</url>
  <url type="bugtracker">http://www.github.com/stack-of-tasks/sot-core/issues</url>
  <author>Olivier Stasse</author>
  <author email="ostasse@laas.fr">ostasse@laas.fr</author>

  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>boost</depend>
  <depend>dynamic-graph</depend>
  <depend>dynamic-graph-python</depend>
  <depend>pinocchio</depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>dynamic-graph</doc_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
